<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AtualizarNotaActivity"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/atualizarNotaHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="177dp"
            android:fontFamily="@font/poppins"
            android:text="@string/atualizar_nota_heading"
            android:textColor="@color/orange_100"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/botao_salvar_nota"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/botao_salvar_nota"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/descricao_botao_adicionar_nota"
            android:src="@drawable/baseline_done_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/atualizar_titulo_nota_input"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/orange_border"
        android:maxLines="1"
        android:textSize="20sp"
        android:fontFamily="@font/poppins"
        android:padding="12dp"
        android:inputType="text"
        android:hint="@string/titulo_nota_input_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"/>

    <EditText
        android:id="@+id/atualizar_descricao_nota_input"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/orange_border"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:hint="@string/conteudo_nota_input_hint"
        android:inputType="textMultiLine"
        android:padding="12dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atualizar_titulo_nota_input" />

    <CheckBox
        android:id="@+id/atualizar_checkBoxConcluida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/concluida"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/atualizar_descricao_nota_input"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/atualizar_prioridadeRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/atualizar_checkBoxConcluida">

        <RadioButton
            android:id="@+id/atualizar_baixaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="@font/poppins"
            android:text="@string/prioridade_baixa"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/atualizar_mediaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/prioridade_media"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/atualizar_altaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/prioridade_alta"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>